<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/tbSquad"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:background="?attr/colorPrimary"
		app:titleTextColor="@android:color/white" />

	<TextView
		android:id="@+id/lblMySquad"
		style="@style/Text.H6"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/viewMargin"
		android:layout_marginTop="@dimen/viewMargin"
		android:layout_marginEnd="@dimen/viewMargin"
		android:textAlignment="center"
		android:text="@string/my_squad" />

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/rvSquad"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:clipToPadding="true"
		android:orientation="horizontal"
		tools:orientation="horizontal"
		android:scrollbars="horizontal"
		tools:listitem="@layout/item_squadmember"/>

	<com.babestudios.base.view.MultiStateView
		android:id="@+id/msvHeroes"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"
		app:msv_emptyView="@layout/multi_state_view_empty"
		app:msv_errorView="@layout/multi_state_view_error"
		app:msv_loadingView="@layout/multi_state_view_progress"
		app:msv_viewState="content">

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/rvHeroes"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:clipToPadding="true"
			android:scrollbars="vertical"
			tools:listitem="@layout/item_superhero"/>

		<LinearLayout
			android:id="@+id/llSquadCannotConnect"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"
			android:background="@color/colorAccent"
			android:gravity="center_horizontal"
			android:orientation="vertical"
			android:visibility="gone"
			tools:visibility="visible">

			<TextView
				style="@style/Text.H6"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/viewMargin"
				android:layout_marginTop="@dimen/viewMargin"
				android:layout_marginEnd="@dimen/viewMargin"
				android:textAlignment="center"
				android:textColor="@android:color/white"
				android:text="@string/can_t_connect_to_the_server" />

			<com.google.android.material.button.MaterialButton
				android:id="@+id/btnSquadReload"
				style="@style/Button.Text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/viewMarginSmall"
				android:layout_marginBottom="@dimen/viewMarginSmall"
				android:text="@string/reload"
				android:textSize="@dimen/textSizeH5" />
		</LinearLayout>
	</com.babestudios.base.view.MultiStateView>


</LinearLayout>

